# WIFI-RADIO

./: .gitignore  CMakeLists.txt  encoder.cpp  oled.cpp  onion.cmake  radio_parced.txt
encoder/: encoder  encoder.cpp  encoder.h
gpio/: encoder.cpp  gpioIrq.c  gpioirqlib.c  test.cpp
gpioIrq-master/: gpioIrq
old/: encoder.cpp  encoder.h  gpioirq.c  gpioirq.h  oled.cpp
oled/: CMakeLists.txt  display.h  displayDriver.cpp  displayDriver.h  encoder.cpp  gpioirqlib.c  gpioirqt.cpp  gpioirqt.h  hello  oled-exp.c  oled-exp.h  onion-i2c.c  onion-i2c.cpp  onion-i2c.h  parcer.cpp  test  testirq  testo  testp
oled/src/: encoder.h  gpioirqt.cpp  main.cpp  oled-exp.cpp
src/: encoder.cpp  gpioirqt.cpp  gpioirqt.h  inputcontrol.cpp  inputcontrol.h  main.cpp
src/trash/: display.cpppp  gpioirqlib.cpppp
